modification du nom des réseaux sociaux

--- a/views/index.erb
+++ b/views/index.erb
@@ -18,8 +18,8 @@
 			<a href="/"><img src="img/out.png" id="out"></a>
 		</div>
 		<div class="col-md-12" id="empty">
-			<a href="https://www.facebook.com/simplonvillage"><img src="img/face.png" id="pic1"></a>
-			<a href="https://twitter.com/SimplonVillage"><img src="img/twit.png" id="pic2"></a>
+			<a href="https://www.facebook.com/wildcodeschool"><img src="img/face.png" id="pic1"></a>
+			<a href="https://twitter.com/WildCodeSchool"><img src="img/twit.png" id="pic2"></a>
 			<a href="https://simplon-village.slack.com/messages/general/"><img src="img/chat.png" id="pic4"></a>
 			<a href="https://simplon-village-2014.hackpad.com/"><img src="img/hack.png" id="pic5"></a>
 			<img src="img/prof.png" id="pic3">
@@ -39,7 +39,7 @@
 			<a href="https://www.google.com/calendar/embed?src=rt42s5pcokgcc51juvuunp6s8s%40group.calendar.google.com&ctz=Europe/Paris"><img src="img/agenda.jpg"></a>
 		</div>
 		<div class="col-md-3" id="msg">
-			<a class="twitter-timeline"  href="https://twitter.com/SimplonVillage" data-widget-id="532862198771494912">Tweets de @SimplonVillage</a>
+			<a class="twitter-timeline"  href="https://twitter.com/WildCodeSchool" data-widget-id="532862198771494912">Tweets de @WildCodeSchool</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           
 		</div>
@@ -50,7 +50,7 @@
 			</form>
 		</div>
 		<div class="col-md-7 col-md-offset-1" id="window">
-			<p>Bonjour et bienvenue sur l'intranet de simplon Village ! Rechargez la page pour actualiser le tchat.</p>
+			<p>Bonjour et bienvenue sur l'intranet de la Wild Code School ! Rechargez la page pour actualiser le tchat.</p>
 			<% @msgs.each do |send| %>
       				<p><%= send.content %></p>
     			<% end %>
@@ -59,7 +59,7 @@
 			</form>
 		</div>
 		<div class="col-md-12" id="footer">
-			<h1><strong>Intranet Simplon Village #Alpha</strong></h1>
+			<h1><strong>Intranet Wild Code School #Alpha</strong></h1>
 		</div>
 	</body>
 </html>
